// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Request handler should run informationHandler 1`] = `
Object {
  "response": Object {
    "directives": Array [],
    "outputSpeech": Object {
      "ssml": "<speak><p>Der Tag der Niedersachsen 2017 findet zum 35. Mal statt. Nach 1983 und 2005 ist Wolfsburg nun zum dritten Mal Ausrichterstadt.</p><p>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
}
`;

exports[`Request handler should run introHandler 1`] = `
Object {
  "response": Object {
    "card": Object {
      "image": Object {
        "largeImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card.2x.png",
        "smallImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card.1x.png",
      },
      "text": "Sage \\"Informationen\\" für Allgemeine Informationen oder \\"Programm\\" für eine Programmübersicht.",
      "title": "Willkommen zum 35. Tag der Niedersachsen im Jahr 2017",
      "type": "Standard",
    },
    "directives": Array [],
    "outputSpeech": Object {
      "ssml": "<speak><p>Willkommen zum 35. \\"Tag der Niedersachsen\\" im Jahr 2017. <break /> Ich habe allgemeine Informationen oder eine Programmübersicht.</p><p>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
}
`;

exports[`Request handler should run programHandler 1`] = `
Object {
  "response": Object {
    "directives": Array [
      Object {
        "slotToElicit": "Tag",
        "type": "Dialog.ElicitSlot",
      },
    ],
    "outputSpeech": Object {
      "ssml": "<speak><p>Der Tag der Niedersachsen findet statt von Freitag den 1. bis Sonntag den 3. September.</p><p>Welcher Tag interessiert Dich?</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Freitag</emphasis>, <emphasis>Samstag</emphasis> oder <emphasis>Sonntag</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
}
`;

exports[`Request handler should run programHandler with filled slot 1`] = `
Object {
  "response": Object {
    "card": Object {
      "image": Object {
        "largeImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card.2x.png",
        "smallImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card.1x.png",
      },
      "text": "
    16:00 bis 20:00 Uhr Festmeile

    16:00 bis 24:00 Uhr Bühnenprogramm
    ",
      "title": "Programm für Freitag, 1. September",
      "type": "Standard",
    },
    "directives": Array [],
    "outputSpeech": Object {
      "ssml": "<speak><p>Programm für Freitag, 1. September</p><p>16 bis 20 <prosody pitch=\\"-10%\\">Uhr</prosody> <break time=\\"100ms\\" /> Festmeile</p><p>16 bis 24 Uhr <break time=\\"100ms\\" /> Bühnenprogramm</p><p>Welcher Tag interessiert Dich?</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Freitag</emphasis>, <emphasis>Samstag</emphasis> oder <emphasis>Sonntag</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
}
`;

exports[`Request handler should run sessionEndedHandler 1`] = `
Object {
  "response": Object {
    "directives": Array [],
    "outputSpeech": Object {
      "text": "Auf Wiedersehen.",
      "type": "PlainText",
    },
    "shouldEndSession": true,
  },
  "sessionAttributes": Object {
    "STATE": "",
  },
}
`;
